Pushing to github

--- a/data-entry.html
+++ b/data-entry.html
@@ -15,28 +15,14 @@
 <body>
 <link rel="import" href="./index.html">
 <div class="navbar">
-	<li class="navbar navbar-left">
-		<ul>
-			<a href="./kudos-no-strap.html">Home</a>
-		</ul>
-		<ul>
-			<a href="./data-page.html">Data</a>
-		</ul>
-		<ul>
-			<a href="#">Love</a>
-		</ul>
-		<ul>
-			<a href="#">Readme</a>
-		</ul>
-	</li>
-	<li class="navbar navbar-right">
-		<ul>
-			Login
-		</ul>
-		<ul>
-			Register
-		</ul>
-	</li>
+	<ul>
+		<li><a href="./kudos-no-strap.html">Home</a></li>
+		<li><a href="./data-page.html">Data</a></li>
+		<li><a href="mailto:frontier64@gmail.com?subject=Hello!">Love</a></li>
+		<li><a href="#">Readme</a></li>
+		<li><a class="current" href="./data-entry.html">Give Data!</a></li>
+		<li class="right"><a href="#">Login</a></li>
+		<li class="right"><a href="#">Register</a></li>
 </div>
 <div class="page">
 	<div class="splash">
