--- a/kudos-no-strap.html
+++ b/kudos-no-strap.html
@@ -12,51 +12,32 @@
 </head>
 <body>
 <div class="navbar">
-	<li class="navbar navbar-left">
-		<ul>
-			<a href="./kudos-no-strap.html">Home</a>
-		</ul>
-		<ul>
-			<a href="./data-page.html">Data</a>
-		</ul>
-		<ul>
-			<a href="#">Love</a>
-		</ul>
-		<ul>
-			<a href="#">Readme</a>
-		</ul>
-		<ul>
-			<a href="./data-entry.html">Give Data!</a>
-		</ul>
-	</li>
-	<li class="navbar navbar-right">
-		<ul>
-			Login
-		</ul>
-		<ul>
-			Register
-		</ul>
-	</li>
+	<ul>
+		<li><a class="current" href="./kudos-no-strap.html">Home</a></li>
+		<li><a href="./data-page.html">Data</a></li>
+		<li><a href="mailto:frontier64@gmail.com?subject=Hello!">Love</a></li>
+		<li><a href="#">Readme</a></li>
+		<li><a href="./data-entry.html">Give Data!</a></li>
+		<li class="right"><a href="#">Login</a></li>
+		<li class="right"><a href="#">Register</a></li>
 </div>
 <div class="page">
 	<div class="splash">
 		<div class="title">
 			<h1 style="font-size: 80px;">Kudos</h1>
 			<h2>The physics graduate school comparison calculator</h2>
-			<h2 class="no-indent">Find out how you match up</h2>
+			<h2>Find out how you match up</h2>
 		</div>
 	</div>
 
 	<div class="enroll">
-		<a href="#login">
-			<div class="login">
+		<div>
+			<a href="#login" class="login">
 				<h2>Login</h2>
-			</div>
-		</a>
-		<a href="register">
-			<div class="login">
-				<h2>Register</h2>
-			</div>
+			</a>
+		</div>
+		<a href="register" class="login">
+			<h2>Register</h2>
 		</a>
 	</div>
 
@@ -74,6 +55,8 @@
 </div>
 
 
-<script type="text/javascript"></script>
+<script type="text/javascript">
+
+</script>
 </body>
  </html>
