Added a bunch of files

--- a/data-entry.html
+++ b/data-entry.html
@@ -11,6 +11,7 @@
 	<meta property="og:image" content="">
 	<meta property="og:url" content="">
 	<link rel="stylesheet" href="no-strap.css">
+	<link rel="stylesheet" type="text/css" href="no-strap-mobile.css">
 </head>
 <body>
 <link rel="import" href="./index.html">
