--- a/kudos-no-strap.html
+++ b/kudos-no-strap.html
@@ -23,11 +23,9 @@
 </div>
 <div class="page">
 	<div class="splash">
-		<div class="title">
-			<h1 style="font-size: 80px;">Kudos</h1>
-			<h2>The physics graduate school comparison calculator</h2>
-			<h2>Find out how you match up</h2>
-		</div>
+		<h1 style="font-size: 80px;">KUDOS</h1>
+		<h2>The Physics Graduate School Comparison Calculator</h2>
+		<h2>Find out how you match up</h2>
 	</div>
 
 	<div class="enroll">
